# fpocket-old

./: makefile
data/: astex-diverse-d.txt  astex-diverse-f.txt  astex-diverse-t.txt  ccdc-clean-d.txt  ccdc-clean-f.txt  ccdc-clean-t.txt  ccdc-d.txt  ccdc-f.txt  ccdc-t.txt  cheng-d.txt  cheng-f.txt  cheng-t.txt  decisions.txt  pp-apo-d.txt  pp-apo-f.txt  pp-apo-t.txt  pp-cplx-d.txt  pp-cplx-f.txt  pp-cplx-t.txt  train-d.txt  train-f.txt  train-t.txt
data/astex-diverse/: astex-diverse-t.txt
dev/: makefile
dev/data/: cheng-t.txt  train-t.txt
dev/doc/: manual_fpocket1.0.odt  manual_fpocket1.1.odt
dev/headers/: aa.h  asa.h  cluster.h  clusterlib.h  descriptors.h  dpocket.h  fparams.h  fpocket.h  mdparams.h  mdpbase.h  mdpmain.h  mdpmem.h  mdpout.h  memhandler.h  neighbor.h  pocket.h  refine.h  utils.h  voronoi.h  voronoi_lst.h  writepocket.h
dev/src/: aa.c  asa.c  check.c  cluster.c  clusterlib.c  descriptors.c  dparams.c  dpocket.c  fparams.c  fpmain.c  fpocket.c  mdparams.c  mdpbase.c  mdpmain.c  mdpmem.c  mdpocket.c  mdpout.c  memhandler.c  neighbor.c  pertable.c  pocket.c  refine.c  rpdb.c  tpocket.c  utils.c  voronoi.c  voronoi_lst.c  writepocket.c
fpocket-1.0b/: Makefile.am  clean.sh  configure.ac  descall.sh  makefile  pf_cplx.txt  pp_apo.txt  pp_cplx.txt  pp_cplx_dpocket.txt  pp_cplx_fpocket.txt  stats_pp_apo_g.txt  stats_pp_complex_g.txt  testall.sh  todo.txt
fpocket-1.0b/data/: astex-diverse-t.txt  astex_set07.tgz  ccdc-d.txt  ccdc-t.txt  log_dataset.txt  pf-cplx-d.txt  pf-cplx-t.txt  pf_check.txt  pp-apo-d.txt  pp-cplx-t.txt  train-d.txt  updt-dinput.sh
fpocket-1.0b/doc/: manual_fpocket1.0.odt
fpocket-1.0b/eval-PP/: eval_PP_cheng.svl
fpocket-1.0b/headers/: aa.h  atom.h  calc.h  check.h  cluster.h  descriptors.h  dparams.h  dpmain.h  dpocket.h  fparams.h  fpmain.h  fpocket.h  fpout.h  memhandler.h  neighbor.h  pertable.h  pocket.h  pscoring.h  refine.h  rpdb.h  sort.h  tparams.h  tpmain.h  tpocket.h  utils.h  voronoi.h  voronoi_lst.h  write_visu.h  writepdb.h  writepocket.h
fpocket-1.0b/man/: dpocket.8  fpocket.8  tpocket.8
fpocket-1.0b/nbproject/: Makefile-Default.mk  Makefile-impl.mk  configurations.xml  project.xml
fpocket-1.0b/src/: Makefile.am  aa.c  atom.c  calc.c  check.c  cluster.c  descriptors.c  dparams.c  dpmain.c  dpocket.c  druggability.c  fparams.c  fpmain.c  fpocket.c  fpout.c  memhandler.c  neighbor.c  pertable.c  pocket.c  pscoring.c  psorting.c  refine.c  rpdb.c  sort.c  tparams.c  tpmain.c  tpocket.c  utils.c  voronoi.c  voronoi_lst.c  write_visu.c  writepdb.c  writepocket.c
fpocket-1.0b/src/qhull/: makefile  mem.h.gch  qconvex.c  qdelaun.c  qhalf.c  qhull.h.gch  qvoronoi.c  qvoronoi.h  rbox.c  unix.c  user.h.gch
sample/: dpout_explicitp.txt  dpout_fpocketp.txt
(+547 files in other folders)
